user authentication completed

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=3000
+DATABASE_URL="mongodb+srv://rohitjoshi21:rohitjoshi@cluster0.ptgul.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+JWT_SECRET="rohit"
