--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/server.js\""
   },
   "repository": {
     "type": "git",
