socketio bundling done, middlewares used for socket request, update move event used

--- a/package.json
+++ b/package.json
@@ -1,52 +1,61 @@
 {
-  "name": "checker_express",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"tsc --watch\" \"nodemon dist/server.js\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rohitjoshi21/checker-express.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rohitjoshi21/checker-express/issues"
-  },
-  "homepage": "https://github.com/rohitjoshi21/checker-express#readme",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "express": "^4.21.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.10.0",
-    "mongoose": "^8.8.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.9.0",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
-    "concurrently": "^9.1.0",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
-    "globals": "^15.12.0",
-    "nodemon": "^3.1.7",
-    "prettier": "^3.3.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.14.0"
-  }
+    "name": "checker_express",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/app.js",
+    "targets": {
+        "global": {
+            "context": "browser",
+            "outputFormat": "global"
+        }
+    },
+    "scripts": {
+        "build": "npx tsc",
+        "start": "node dist/app.js",
+        "dev": "concurrently \"tsc --watch\" \"nodemon\" \"npx watchify dist/game.js -o dist/gamebundled.js -v\""
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/rohitjoshi21/checker-express.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/rohitjoshi21/checker-express/issues"
+    },
+    "homepage": "https://github.com/rohitjoshi21/checker-express#readme",
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "ejs": "^3.1.10",
+        "express": "^4.21.1",
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.10.0",
+        "mongoose": "^8.8.1",
+        "socket.io": "^4.8.1",
+        "socket.io-client": "^4.8.1"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.15.0",
+        "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.7",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/node": "^22.9.0",
+        "@typescript-eslint/eslint-plugin": "^8.14.0",
+        "@typescript-eslint/parser": "^8.14.0",
+        "concurrently": "^9.1.0",
+        "eslint": "^9.15.0",
+        "eslint-config-prettier": "^9.1.0",
+        "globals": "^15.12.0",
+        "nodemon": "^3.1.7",
+        "parcel": "^2.13.0",
+        "prettier": "^3.3.3",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.3",
+        "typescript-eslint": "^8.14.0"
+    }
 }
